# lyrebird

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  Secrets.toml  Secrets.toml.example  Shuttle.toml  build.rs  config.toml  secrets.toml  shuttle_setup_container.sh
.github/workflows/: publish.yml
runner/: Cargo.toml
src/: main.rs  play.rs  search.rs  ytdlp.rs
