[package]
name = "lyrebird"
description = "this package uses youtube-dl and is a discord bot. How could this be bad?"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] } 
lazy_static = "1.5.0"
tracing = "0.1.40"
reqwest = { version = "0.11.27", default-features = false, features = ["rustls-tls"] }
color-eyre = "0.6.3"
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
rand = "0.8.5"
tempfile = "3.13.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# TODO
[dependencies.poise]
git = "https://github.com/serenity-rs/poise"
branch = "current"

[dependencies.songbird]
git = "https://github.com/serenity-rs/songbird"
branch = "current"
features = [ "builtin-queue" ]

[dependencies.serenity]
version = "0.12.2"
default-features = false
features = ["client", "model", "cache", "voice", "rustls_backend"]

[dependencies.symphonia]
version = "0.5.4"
features = ["aac", "mp3", "isomp4", "alac"]
